--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <input id="cityName" type="text" placeholder="Inter city name">
         <br>
         <button onclick = 'submitName()'>Check Weather</button>
-        <p id="description">cloudy</p>
-        <h1 id="temp">22 degree celcius</h1>
+        <p id="description"></p>
+        <h1 id="temp"></h1>
         <hr>
-        <p id="location">Dhaka</p>
+        <p id="location"></p>
     </div>
     <script src="index.js"></script>
 </body>
