--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <div id="weather">
         <input id="cityName" type="text" placeholder="Inter city name">
         <br>
-        <button onclick = 'submitName()'>Check Weather</button>
+        <button onclick = 'submitName()' id="btn">Check Weather</button>
         <p id="description"></p>
         <h1 id="temp"></h1>
         <hr>
         <p id="location"></p>
+        <p id="time">Current Time</p>
     </div>
     <script src="index.js"></script>
 </body>
